/**
* 定义login 和dataaccess之间IPC的通信协议
*/
syntax = "proto3";

package inner_ipc;

// 请求登录
message RequestLoginIPC {
	int32 			requestId		= 1;	//	客户网络id
	string 			userName		= 2;	//	用户名
}

// 请求登录响应
message ResponseLoginIPC {
	int32 			status 			= 1; 	//	状态 0:成功   1:玩家已经存在  			
	int32 			rid 			= 2;	//	玩家rid
	int32 			requestId 		= 3;	//	玩家网络id
	string 			userName 		= 4;	//	用户名
	string			msg 			= 5;	//	请求登录信息
}